# phoseum

./: Cargo.toml  README.md
docs/: hardware.md
install/: config  configure.sh  install-services.sh  phoseum-sleep.sh  phoseum-start.sh  phoseum-wakeup.sh  player-cmd.sh  playlist-cmd.sh  setup-pi.sh  update-phoseum.sh
src/: album.rs  console_control.rs  control.rs  gpio_control.rs  http_control.rs  lib.rs  player.rs  player_vlc.rs  playlist.rs  slideshow.rs  storage.rs
src/googlephotos/: api.rs  mod.rs
src/oauth/: mod.rs  store.rs
